# Powersense_RC_Car

./: .gitignore  CLAUDE.md  README.md
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: PowerConsumption.msg
hardware_testing/Power_Monitor_INA3221/: platformio.ini
hardware_testing/Power_Monitor_INA3221/src/: main.cpp
install/: local_setup.sh  setup.sh
install/camera_realsense/lib/camera_realsense/: camera_interface_node
install/camera_realsense/share/camera_realsense/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
mystuff/custom_commands/: plot_power.sh  set_cpu_frequency.sh  source_things.sh  start_depth_camera.sh  start_fake_power.sh  start_rplidar.sh
mystuff/learning_resources/examples/: i2c_slave_read.py  i2c_test.py  joystick.py
mystuff/learning_resources/examples/first project/: .cproject  .mxproject  .project  CMakeLists.txt  HARDWARE_WIRING.md  first project.ioc  first project.launch
mystuff/schematics/: test.drawio
notes/custom_scripts/: start_depth_camera.sh
src/camera_realsense/: package.xml  setup.cfg  setup.py
src/camera_realsense/camera_realsense/: camera_interface_node.py
src/power_monitor/: package.xml  setup.py
src/power_monitor/config/: sensor_map.json
src/power_monitor/power_monitor/: fake_power_node.py  serial_bridge.py
src/power_monitor/scripts/: plot_power.py
src/rplidar_a2m8/: package.xml  setup.cfg  setup.py
src/rplidar_a2m8/launch/: rplidar.launch.py
src/rplidar_a2m8/rplidar_a2m8/: rplidar_interface_node.py
(+18 files in other folders)
